--- a/stylesheets/scss/_tabs.scss
+++ b/stylesheets/scss/_tabs.scss
@@ -1,6 +1,6 @@
 // Tabs Page
 
-body#tab_page {
+body{
   [data-ur-tabs-component='button'] {
     background-color: silver;
     border: 1px solid black;
