made infinite scrolling a little smoother when there's only one clone. left my debug logs in for now but commented them out (will remove later)

--- a/migration/css/test.css
+++ b/migration/css/test.css
@@ -69,7 +69,7 @@
 
   /* Carousel */
   *[data-ur-carousel-component="view_container"] {
-   // width: 50%;
+    width: 50%;
     overflow-x: hidden;
     cursor: pointer;
   }
