Removed jump to and added new example for carousel.html

--- a/_layouts/widgets.html
+++ b/_layouts/widgets.html
@@ -3,7 +3,7 @@
   <head>
     {% include head.html %}
     <link href="/stylesheets/jasmine.css" rel="stylesheet" />
-    // <script>
+    <script>
     // describe = function(){};
     // dev_mode = false;//location.hostname == "localhost";
     // if (dev_mode)
@@ -15,8 +15,8 @@
     //                   <script src="{{site.url}}..\/src\/browsers.js"><\/script>\
     //                   <script src="{{site.url}}..\/src\/key.js"><\/script>\
     //                   <script src="{{site.url}}..\/src\/drag.js"><\/script>');
-    // </script>
-    // <script>
+    </script>
+    <script>
     // if (dev_mode)
     //   (function() {
     //     var jasmineEnv = jasmine.getEnv();
@@ -32,7 +32,7 @@
 
     //       window.onload = function() { jasmineEnv.execute(); };
     //     })();
-    // </script>
+    </script>
   </head>
   
   <body id="{{page.name}}_page" class="widget_page">
